src/scss/components/landing/cta/actions/_sponsor.scss
&__sponsor-container {
  width: 100%;
}
&__sponsor-title-container {
  margin: 5.91% 35.42% 0 12.07%;
  @include respond(phone) {
    margin: 3em auto -2em auto;
  }
}
&__sponsor-title {
  @include font-source-header(
    $size: 35px,
    $color: #2e2c5f,
    $weight: bold,
    $lineHeight: 41px,
    $letterSpace: 0.04em
  );
  font-family: Rubik Bold;
  text-indent: 3px;
  mix-blend-mode: normal;
  @include respond(tab-land) {
    font-size: 1.85em;
    margin: 0 auto;
  }
  @include respond(phone-narrow) {
    width: 10em;
    margin: auto;
    text-align: center;
    padding-bottom: 2.5em;
  }
}
&__sponsor-description-container {
  margin: 2% 44.01% 0 12.33%;
  white-space: nowrap;
}
&__sponsor-description {
  font-family: Avenir;
  font-family: SofiaProSoftW01-Regular;
  font-size: 16px;
  line-height: 12px;

  letter-spacing: 0.02em;
  @include responsive-font(1.9vw, 14px, 16px);

  color: #383636;

}

